@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore no longer requires a manifest to exist if the repository uses
+  thin-manifests, and there are no distfiles for a pkg.
+
 * removed support for FEATURES=allow-missing-checksums.  Use repository
   metadata/layout.conf controls instead.
 
